--- a/facewash.html
+++ b/facewash.html
@@ -28,22 +28,22 @@
             </div>
             <div class="menu d-none d-lg-block">
                 <div class="d-flex align-items-center">
-                    <a class="nav-link p-4 fs-6 active fw-semibold" aria-current="page" href="#">Home</a>
-                    <a class="nav-link p-4 fs-6 fw-semibold" href="#">Mens</a>
-                    <a class="nav-link p-4 fs-6 fw-semibold" href="#">Womens</a>
-                    <a class="nav-link p-4 fs-6 fw-semibold" href="#">Kids</a>
+                    <a class="nav-link p-4 fs-6 active fw-semibold" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link p-4 fs-6 fw-semibold" href="mens.html">Mens</a>
+                    <a class="nav-link p-4 fs-6 fw-semibold" href="Womens.html">Womens</a>
+                    <a class="nav-link p-4 fs-6 fw-semibold" href="Kids.html">Kids</a>
                     <div class="dropdown">
                         <button class="btn border-0 d-block dropdown-toggle p-4 fs-6 fw-semibold" type="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Pages
                         </button>
                         <ul class="dropdown-menu border-0 dropdown-Menu">
-                            <li><a class="dropdown-item  fs-6 fw-semibold" href="#">Login</a></li>
-                            <li><a class="dropdown-item  fs-6 fw-semibold" href="#">Cart</a></li>
+                            <li><a class="dropdown-item  fs-6 fw-semibold" href="login.html">Login</a></li>
+                            <li><a class="dropdown-item  fs-6 fw-semibold" href="cart.html">Cart</a></li>
                         </ul>
                     </div>
-                    <a class="nav-link p-4 fs-6 fw-semibold" href="#">Blog</a>
-                    <a class="nav-link p-4 fs-6 fw-semibold" href="#">Contact</a>
+                    <a class="nav-link p-4 fs-6 fw-semibold" href="blogs.html">Blog</a>
+                    <a class="nav-link p-4 fs-6 fw-semibold" href="contact.html">Contact</a>
                 </div>
             </div>
             <div class="icons d-flex align-items-center ">
@@ -51,9 +51,9 @@
                     id="sear">
                 <a href="#"><i id="ico" class="bi bi-search fs-4 px-2  text-dark d-lg-block d-none"
                         onclick="foc()"></i></a>
-                <a href="#"><i class="bi bi-person fs-4 px-md-2 px-1  text-dark"></i></a>
+                <a href="login.html"><i class="bi bi-person fs-4 px-md-2 px-1  text-dark"></i></a>
                 <a href="#"><i class="bi bi-heart fs-4 px-md-2 px-1  text-dark"></i></a>
-                <a href="#" class="d-flex"><i class="bi bi-cart3 fs-4 px-md-2 px-1  text-dark position-relative">
+                <a href="cart.html" class="d-flex"><i class="bi bi-cart3 fs-4 px-md-2 px-1  text-dark position-relative">
                         <span class="num-item">
                             0
                         </span>
@@ -66,18 +66,18 @@
         <div class="offcanvas-body">
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
                 style="top: 15px;left:20px;position: fixed;"></button>
-            <a href="" class="d-block px-3 py-2 mt-4 link-light text-decoration-none">Home</a>
-            <a href="" class="d-block px-3 py-2 link-light text-decoration-none">Mens</a>
-            <a href="" class="d-block px-3 py-2 link-light text-decoration-none">Womens</a>
-            <a href="" class="d-block px-3 py-2 link-light text-decoration-none">Kids</a>
+            <a href="index.html" class="d-block px-3 py-2 mt-4 link-light text-decoration-none">Home</a>
+            <a href="mens.html" class="d-block px-3 py-2 link-light text-decoration-none">Mens</a>
+            <a href="Womens.html" class="d-block px-3 py-2 link-light text-decoration-none">Womens</a>
+            <a href="Kids.html" class="d-block px-3 py-2 link-light text-decoration-none">Kids</a>
             <div class="dropdown d-block py-2">
                 <button class="btn d-block dropdown-toggle link-light text-decoration-none" type="button"
                     data-bs-toggle="dropdown" aria-expanded="false">
                     Pages
                 </button>
                 <ul class="dropdown-menu border-0">
-                    <li><a class="dropdown-item  fs-6 fw-semibold" href="#">Login</a></li>
-                    <li><a class="dropdown-item  fs-6 fw-semibold" href="#">Cart</a></li>
+                    <li><a class="dropdown-item  fs-6 fw-semibold" href="login.html">Login</a></li>
+                    <li><a class="dropdown-item  fs-6 fw-semibold" href="cart.html">Cart</a></li>
                 </ul>
             </div>
             <a href="" class="d-block px-3 py-2 link-light text-decoration-none">Blog</a>
