--- a/mens.html
+++ b/mens.html
@@ -28,7 +28,7 @@
             </div>
             <div class="menu d-none d-lg-block">
                 <div class="d-flex align-items-center">
-                    <a class="nav-link p-4 fs-6 active fw-semibold" aria-current="page" href="home.html">Home</a>
+                    <a class="nav-link p-4 fs-6 active fw-semibold" aria-current="page" href="index.html">Home</a>
                     <a class="nav-link p-4 fs-6 fw-semibold" href="mens.html">Mens</a>
                     <a class="nav-link p-4 fs-6 fw-semibold" href="womens.html">Womens</a>
                     <a class="nav-link p-4 fs-6 fw-semibold" href="kids.html">Kids</a>
@@ -67,7 +67,7 @@
         <div class="offcanvas-body">
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
                 style="top: 15px;left:20px;position: fixed;"></button>
-            <a href="home.html" class="d-block px-3 py-2 mt-4 link-light text-decoration-none">Home</a>
+            <a href="index.html" class="d-block px-3 py-2 mt-4 link-light text-decoration-none">Home</a>
             <a href="mens.html" class="d-block px-3 py-2 link-light text-decoration-none">Mens</a>
             <a href="womens.html" class="d-block px-3 py-2 link-light text-decoration-none">Womens</a>
             <a href="kids.html" class="d-block px-3 py-2 link-light text-decoration-none">Kids</a>
