--- a/index.html
+++ b/index.html
@@ -827,12 +827,12 @@
       <div class="footer-mid">
         <div class="container border-bottom py-4 border-secondary">
           <div class="row justify-content-between">
-            <div class="col-md-2">
+            <div class="col-md-2 text-center">
               <img src="images/Fashion-logo-white.png" alt="" class="img-fluid" style="height: 150px;">
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 text-center">
               <h3 class="text-white py-3 font-style">Shop Mens</h3>
-              <ul>
+              <ul class="p-0">
                 <li class="py-1">
                   <a class="text-decoration-none text-white" href="menspant.html">Mens pant</a>
                 </li>
@@ -847,9 +847,9 @@
                 </li>
               </ul>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 text-center">
               <h3 class="text-white py-3 font-style">Shop Women</h3>
-              <ul>
+              <ul class="p-0">
                 <li class="py-1">
                   <a class="text-decoration-none text-white" href="womenspant.html">Womens pant</a>
                 </li>
@@ -864,9 +864,9 @@
                 </li>
               </ul>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 text-center">
               <h3 class="text-white py-3 font-style">Shop kids</h3>
-              <ul>
+              <ul class="p-0">
                 <li class="py-1">
                   <a class="text-decoration-none text-white" href="kidspant.html">Kids pant</a>
                 </li>
@@ -881,9 +881,9 @@
                 </li>
               </ul>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 text-center">
               <h3 class="text-white py-3 font-style">Quick links</h3>
-              <ul>
+              <ul class="p-0">
                 <li class="py-1">
                   <a class="text-decoration-none text-white" href="contact.html">Support</a>
                 </li>
