--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="row">
-              <div class="col-7 col-md-6">
-                <div class="d-flex justify-content-center align-items-center px-2" style="height: 100%;">
+              <div class="col-12 col-md-6">
+                <div class="d-flex justify-content-center align-items-center p-4 p-md-2" style="height: 100%;">
                   <div>
                     <h4 class="text-center text-danger sale fs-1">Feshion Sale</h4>
                     <h1 class="text-center heading-txt heading-txt">Minimal Womenz Style</h1>
@@ -114,15 +114,15 @@
                   </div>
                 </div>
               </div>
-              <div class="col-5 col-md-6 d-flex justify-content-center">
+              <div class="col-md-6 d-none d-md-flex justify-content-center">
                 <img src="images/carde2.png" alt="" class="img-fluid">
               </div>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="row">
-              <div class="col-7 col-md-6">
-                <div class="d-flex justify-content-center align-items-center px-2" style="height: 100%;">
+              <div class="col-12 col-md-6">
+                <div class="d-flex justify-content-center align-items-center p-4 p-md-2" style="height: 100%;">
                   <div>
                     <h4 class="text-center text-danger sale fs-1">Feshion Sale</h4>
                     <h1 class="text-center">Minimal Menz Style</h1>
@@ -133,15 +133,15 @@
                   </div>
                 </div>
               </div>
-              <div class="col-5 col-md-6 d-flex justify-content-center">
+              <div class="col-md-6 d-none d-md-flex justify-content-center">
                 <img src="images/carde1.png" alt="" class="img-fluid">
               </div>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="row">
-              <div class="col-7 col-md-6">
-                <div class="d-flex justify-content-center align-items-center px-2" style="height: 100%;">
+              <div class="col-12 col-md-6">
+                <div class="d-flex justify-content-center align-items-center p-4 p-md-2" style="height: 100%;">
                   <div>
                     <h4 class="text-center text-danger sale fs-1">Feshion Sale</h4>
                     <h1 class="text-center">Minimal Womenz Style</h1>
@@ -152,15 +152,15 @@
                   </div>
                 </div>
               </div>
-              <div class="col-5 col-md-6 d-flex justify-content-center">
+              <div class="col-md-6 d-none d-md-flex justify-content-center">
                 <img src="images/carde2.png" alt="" class="img-fluid">
               </div>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="row">
-              <div class="col-7 col-md-6">
-                <div class="d-flex justify-content-center align-items-center px-2" style="height: 100%;">
+              <div class="col-12 col-md-6">
+                <div class="d-flex justify-content-center align-items-center p-4 p-md-2" style="height: 100%;">
                   <div>
                     <h4 class="text-center text-danger sale fs-1">Feshion Sale</h4>
                     <h1 class="text-center">Minimal Womenz Style</h1>
@@ -171,7 +171,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-5 col-md-6 d-flex justify-content-center">
+              <div class="col-md-6 d-none d-md-flex justify-content-center">
                 <img src="images/carde1.png" alt="" class="img-fluid">
               </div>
             </div>
