--- a/menshirt.html
+++ b/menshirt.html
@@ -16,6 +16,7 @@
 
 <body>
   <!-- navbar -->
+  <!-- git check ok -->
   <div class="bg-white sticky-top shadow">
     <div class="container d-flex justify-content-between">
       <div class="sidebtn d-block d-lg-none">
